--- a/src/app/features/product/product-create/product-create.component.html
+++ b/src/app/features/product/product-create/product-create.component.html
@@ -98,6 +98,13 @@
         >
       </div>
     </div>
+    <!-- Image -->
+    <div class="mb-3">
+      <app-image-upload
+        #imageUpload
+        (imageSelected)="onImageSelected($event)"
+      ></app-image-upload>
+    </div>
     <!-- Submit -->
     <button
       type="submit"
@@ -105,11 +112,11 @@
       class="btn btn-primary"
       [disabled]="productForm.invalid"
     >
-      {{buttonMsg}}
+      {{ buttonMsg }}
     </button>
     <button
-      type="submit"
-      type="submit"
+      type="button"
+      type="button"
       class="btn btn-primary"
       (click)="resetProductForm()"
     >
